add support for spring boot 3.5.11