@@ -37,7 +37,6 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.URI;
 import java.util.Arrays;
-import java.util.List;
 import java.util.function.Supplier;
 
 @Configuration
@@ -187,8 +186,14 @@ public class WebAppSecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
         config.addAllowedHeader("*");
         config.setAllowedMethods(Arrays.asList("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
-        //config.setAllowedOrigins(Arrays.asList("http://localhost", "http://localhost:4200", "http://localhost:8080", "https://spring-angular-csrf-frontend.onrender.com"));
-        config.setAllowedOriginPatterns(List.of(CorsConfiguration.ALL));
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost",
+                "http://localhost:4200",
+                "http://localhost:8080",
+                "https://spring-angular-csrf-frontend.onrender.com",
+                "https://spring-ren-prod-angular-nested-routing.onrender.com"
+        ));
+        //config.setAllowedOriginPatterns(List.of(CorsConfiguration.ALL));
         config.setAllowCredentials(true); // This is important since we are using session cookies
         source.registerCorsConfiguration("/**", config);
         return source;
